--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://dl.bintray.com/mikefot/maven/" }
+        maven { url "https://dl.bintray.com/alt236/maven/" }
         jcenter()
     }
 }
