--- a/app/build.gradle
+++ b/app/build.gradle
@@ -155,6 +155,10 @@ dependencies {
 
     compile 'com.jakewharton.rxbinding2:rxbinding-appcompat-v7:2.0.0'
 
+    compile 'com.patloew.rxlocation:rxlocation:1.0.3'
+
+    compile 'com.vistrav:ask:2.5'
+
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.3'
     testCompile 'junit:junit:4.12'
