--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "https://maven.google.com"
+        }
         maven { url "https://dl.bintray.com/mikefot/maven/" }
         maven { url "https://dl.bintray.com/alt236/maven/" }
         jcenter()
