--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-final String appCompatLibVersion = "26.0.0-alpha1"
+final String appCompatLibVersion = "26.0.2"
 
 
 android {
