--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ android {
         exclude 'META-INF/license.txt'
         exclude 'META-INF/dependencies.txt'
         exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/rxjava.properties'
     }
 
 
